force-app/main/default/objects/Shared_Solar_System__c/fields/Committed_Demand_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Committed_Demand_Capacity__c</fullName>
    <description>Sum of Complete &quot;Demand&quot; subscriptions (determined when a UAL&apos;s Average Demand exceeds the Average Demand Threshold specified on the Utility record)</description>
    <inlineHelpText>Sum of Complete &quot;Demand&quot; subscriptions (determined when a UAL&apos;s Average Demand exceeds the Average Demand Threshold specified on the Utility record)</inlineHelpText>
    <label>Committed Demand Capacity</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>