force-app/main/default/objects/Shared_Solar_System__c/fields/Contract_Assignment_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contract_Assignment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set manually by Client Ops and used in the Assignment Agreement flow for the Client Entity field on an AA. Sometimes the same as the Project Entity, but not always.</description>
    <inlineHelpText>Set manually by Client Ops and used in the Assignment Agreement flow for the Client Entity field on an AA. Sometimes the same as the Project Entity, but not always.</inlineHelpText>
    <label>Contract Assignment Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Shared Solar Systems (Contract Assignment Entity)</relationshipLabel>
    <relationshipName>Shared_Solar_Systems1</relationshipName>
    <type>Lookup</type>
</CustomField>