force-app/main/default/objects/Shared_Solar_System__c/fields/Count_of_Schedule_Zs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Schedule_Zs__c</fullName>
    <label>Count of Allocation Schedules</label>
    <summaryForeignKey>Schedule_Z__c.Shared_Solar_System__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>