force-app/main/default/objects/Shared_Solar_System__c/fields/Credit_Score_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Requirement__c</fullName>
    <defaultValue>700</defaultValue>
    <inlineHelpText>Minimum accepted customer FICO score.</inlineHelpText>
    <label>Credit Score Requirement</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>