force-app/main/default/objects/Shared_Solar_System__c/fields/CS_Services_Type__c.field-meta.xml
<CustomField>
    <fullName>CS_Services_Type__c</fullName>
    <description>Should use the CS Services Type global picklist, but can&apos;t because it&apos;s already created.</description>
    <inlineHelpText>Differentiates between projects where Perch is contracted to acquire customers and projects where customers are acquired by another party. Set automatically when a new related Client Contract record is effective</inlineHelpText>
    <label>CS Services Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition &amp; Management</fullName>
            </value>
            <value>
                <fullName>Management Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>