force-app/main/default/objects/Shared_Solar_System__c/fields/Customer_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Assignment_Date__c</fullName>
    <description>Populated with the Company Signature Date from the first Assignment Agreement signed by the Client</description>
    <inlineHelpText>Populated with the Company Signature Date from the first Assignment Agreement signed by the Client</inlineHelpText>
    <label>Customer Assignment Date</label>
    <type>Date</type>
</CustomField>