force-app/main/default/objects/Shared_Solar_System__c/fields/Demand_Customer_System_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Demand_Customer_System_Utilization__c</fullName>
    <description>How much of the total system capacity is utilized by Demand Customers (Pending + Committed Demand Capacity / Total System Size)</description>
    <formula>(Committed_Demand_Capacity__c + Pending_Demand_Capacity__c) /  Total_System_Size_kWh_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How much of the total system capacity is utilized by Demand Customers (Pending + Committed Demand Capacity / Total System Size)</inlineHelpText>
    <label>Demand Customer System Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>