force-app/main/default/objects/Shared_Solar_System__c/fields/Do_Not_Ask_for_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Ask_for_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Default unchecked; checked if the SSS does not require payment information (e.g. UCB product)</inlineHelpText>
    <label>Do Not Ask for Payment Method</label>
    <type>Checkbox</type>
</CustomField>