force-app/main/default/objects/Shared_Solar_System__c/fields/Do_Not_Underwrite__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Underwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default unchecked; checked if the SSS does not require underwriting for applicants (e.g. UCB product)</description>
    <inlineHelpText>Default unchecked; checked if the SSS does not require underwriting for applicants (e.g. UCB product)</inlineHelpText>
    <label>Do Not Underwrite</label>
    <type>Checkbox</type>
</CustomField>