force-app/main/default/objects/Shared_Solar_System__c/fields/Est_Utility_NMC_to_Customer_Override__c.field-meta.xml
<CustomField>
    <fullName>Est_Utility_NMC_to_Customer_Override__c</fullName>
    <description>If this field is filled in, it will override the formula in the Est Utility NMC to Customer Date field on the shared solar system record.</description>
    <inlineHelpText>If this field is filled in, it will override the formula in the Est Utility NMC to Customer Date field on the shared solar system record.</inlineHelpText>
    <label>Est First Credit Transfer to Customer</label>
    <type>Date</type>
</CustomField>