force-app/main/default/objects/Shared_Solar_System__c/fields/Est_Utility_NMC_Transfer_to_Host_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Utility_NMC_Transfer_to_Host_Date__c</fullName>
    <label>Est Credit Generation Start Date</label>
    <type>Date</type>
</CustomField>