force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_COD_Date_Manual__c.field-meta.xml
<CustomField>
    <fullName>Estimated_COD_Date_Manual__c</fullName>
    <label>Estimated COD Date</label>
    <type>Date</type>
</CustomField>