force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_Contracted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Contracted_Revenue__c</fullName>
    <inlineHelpText>Accounting managed field for estimating project revenue. Manually entered/updated by Accounting.</inlineHelpText>
    <label>Estimated Contracted Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>