force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_Credit_Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Credit_Flow_Date__c</fullName>
    <description>Adds 30 days to the Last Allocation Schedule Enacted Date if populated. Otherwise, adds 30 days to Actual PTO Date or 3 months to the Estimated PTO Date.</description>
    <formula>BLANKVALUE(Est_Utility_NMC_to_Customer_Override__c,
IF(
ISBLANK(Actual_PTO_Date_MANUAL__c
),
Estimated_PTO_Date_MANUAL__c + 90,
BLANKVALUE(Last_Sch_Z_Enacted_Date__c+30,
Actual_PTO_Date_MANUAL__c+30)))</formula>
    <inlineHelpText>Adds 30 days to the Last Allocation Schedule Enacted Date if populated. Otherwise, adds 30 days to Actual PTO Date or 3 months to the Estimated PTO Date.</inlineHelpText>
    <label>Est Utility NMC to Customer Date</label>
    <type>Date</type>
</CustomField>