force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_Credits_Flowing_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Credits_Flowing_Date__c</fullName>
    <description>NOT USED CAN BE DELETED</description>
    <inlineHelpText>NOT USED CAN BE DELETED</inlineHelpText>
    <label>XEstimated Credits Flowing Date</label>
    <type>Date</type>
</CustomField>