force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_First_Bill_Date__c</fullName>
    <description>This is the 20th of the month after the Actual Credit Flow to Customer Date (or the Estimated Credit Flow to Customer Date if former is blank). If the Estimated first BW Bill Date Override field is filled in, it override this formula and show that date instead.</description>
    <formula>BLANKVALUE(Estimated_First_BW_Bill_Override__c,
BLANKVALUE(
IF(MONTH(Actual_Credits_Flowing_Date__c)=12, DATE(YEAR(Actual_Credits_Flowing_Date__c)+1,1,20), 
DATE(YEAR(Actual_Credits_Flowing_Date__c),MONTH(Actual_Credits_Flowing_Date__c)+1,20)), 

IF(MONTH(Estimated_Credit_Flow_Date__c)=12,
DATE(YEAR(Estimated_Credit_Flow_Date__c)+1,1,20),
DATE(YEAR(Estimated_Credit_Flow_Date__c),MONTH(Estimated_Credit_Flow_Date__c)+1,20))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the 20th of the month after the Actual Credit Flow to Customer Date (or the Estimated Credit Flow to Customer Date if former is blank). If the Estimated first BW Bill Date Override field is filled in, it override this formula and show that instead</inlineHelpText>
    <label>Estimated First BW Bill Date</label>
    <type>Date</type>
</CustomField>