force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_First_BW_Bill_Override__c.field-meta.xml
<CustomField>
    <fullName>Estimated_First_BW_Bill_Override__c</fullName>
    <description>If filled in, the date will override the formula in the Estimated First BW Bill Date field on the shared solar system.</description>
    <inlineHelpText>If filled in, the date will override the formula in the Estimated First BW Bill Date field on the shared solar system.</inlineHelpText>
    <label>Estimated First BW Bill Override</label>
    <type>Date</type>
</CustomField>