force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_Mechanical_Completion_Override__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Mechanical_Completion_Override__c</fullName>
    <description>Estimated date the project will reach mechanical completion.</description>
    <inlineHelpText>Estimated date the project will reach mechanical completion, provided by client.</inlineHelpText>
    <label>Estimated Mechanical Completion</label>
    <type>Date</type>
</CustomField>