force-app/main/default/objects/Shared_Solar_System__c/fields/Estimated_PTO_Date_MANUAL__c.field-meta.xml
<CustomField>
    <fullName>Estimated_PTO_Date_MANUAL__c</fullName>
    <description>Date the project is estimated to reach PTO.</description>
    <inlineHelpText>Date the project is estimated to reach PTO.</inlineHelpText>
    <label>Estimated PTO Date</label>
    <type>Date</type>
</CustomField>