force-app/main/default/objects/Shared_Solar_System__c/fields/Expected_Yield_kWh_kW__c.field-meta.xml
<CustomField>
    <fullName>Expected_Yield_kWh_kW__c</fullName>
    <inlineHelpText>How much energy (kWh) is produced for every kW of project capacity. If yield increases, every kW of the project will produce more energy, and need more CS offtakers to use that capacity</inlineHelpText>
    <label>Expected Yield (kWh/kW)</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>