force-app/main/default/objects/Shared_Solar_System__c/fields/Expected_Yield_MW__c.field-meta.xml
<CustomField>
    <fullName>Expected_Yield_MW__c</fullName>
    <description>This field is used in the Maine customer contract used in SSF. It converts the expected yield kW to MW by dividing by 1000.</description>
    <formula>Expected_Yield_kWh_kW__c* Total_System_Size_kWh_DC__c /1000</formula>
    <label>Expected Yield (MW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>