force-app/main/default/objects/Shared_Solar_System__c/fields/First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Date__c</fullName>
    <inlineHelpText>Date of first bill sent to customers.</inlineHelpText>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>