force-app/main/default/objects/Shared_Solar_System__c/fields/Home_Electricity_Offset__c.field-meta.xml
<CustomField>
    <fullName>Home_Electricity_Offset__c</fullName>
    <formula>Metric_Tons_of_CO2_Offset__c /5.734</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EPA Calculation from July 2019
# of Single Family Homes offset by project</inlineHelpText>
    <label>Home Electricity Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>