force-app/main/default/objects/Shared_Solar_System__c/fields/Host_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Account_Name__c</fullName>
    <description>This is the Account Name used in the NY Allocation Schedule template in Conga. It is currently only needed for NY Shared Solar System Records.</description>
    <inlineHelpText>This is the Account Name used in the NY Allocation Schedule template in Conga. It is currently only needed for NY Shared Solar System Records.</inlineHelpText>
    <label>Host Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>