force-app/main/default/objects/Shared_Solar_System__c/fields/Host_Utility_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Host_Utility_Account_Number__c</fullName>
    <inlineHelpText>Host Utility Account Number supplied by utility.</inlineHelpText>
    <label>Host Utility Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>