force-app/main/default/objects/Shared_Solar_System__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>