force-app/main/default/objects/Shared_Solar_System__c/fields/Last_Sch_Z_Enacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sch_Z_Enacted_Date__c</fullName>
    <description>This field is populated with the maximum Date Enacted by Utility field on all related Allocation Schedule records. If it needs to be updated, please update the Allocation Schedule record.</description>
    <inlineHelpText>This field is populated with the maximum Date Enacted by Utility field on all related Allocation Schedule records. If it needs to be updated, please update the Allocation Schedule record.</inlineHelpText>
    <label>Last Allocation Schedule Enacted Date</label>
    <summarizedField>Schedule_Z__c.Date_Enacted_by_Utility__c</summarizedField>
    <summaryForeignKey>Schedule_Z__c.Shared_Solar_System__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>