force-app/main/default/objects/Shared_Solar_System__c/fields/Last_Schedule_Z__c.field-meta.xml
<CustomField>
    <fullName>Last_Schedule_Z__c</fullName>
    <description>This field is populated by the maximum date from the Date Submitted to Utility field from all related Allocation Schedule records where the Date Submitted to Utility field is not null.</description>
    <inlineHelpText>This field is populated by the maximum date from the Date Submitted to Utility field from all related Allocation Schedule records where the Date Submitted to Utility field is not null. If it needs to be updated, update the Allocation Schedule record.</inlineHelpText>
    <label>Last Allocation Schedule Submitted:</label>
    <summarizedField>Schedule_Z__c.Date_Submitted_to_Utility__c</summarizedField>
    <summaryFilterItems>
        <field>Schedule_Z__c.Date_Submitted_to_Utility__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Schedule_Z__c.Shared_Solar_System__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>