force-app/main/default/objects/Shared_Solar_System__c/fields/LMI__c.field-meta.xml
<CustomField>
    <fullName>LMI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates this system accepts LMI customers</inlineHelpText>
    <label>LMI</label>
    <type>Checkbox</type>
</CustomField>