force-app/main/default/objects/Shared_Solar_System__c/fields/Management_Fee_Escalator_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Escalator_Start_Date__c</fullName>
    <inlineHelpText>Date escalation percentage applies to management fee as specified in contract. Entered by Operations as part of project onboarding process.</inlineHelpText>
    <label>Management Fee Escalator Start Date</label>
    <type>Date</type>
</CustomField>