force-app/main/default/objects/Shared_Solar_System__c/fields/Management_Revenue_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Management_Revenue_Start_Date__c</fullName>
    <description>Previously entered/updated by Accounting, but automated with W-019836</description>
    <inlineHelpText>Accounting managed field for estimating project revenue, set daily based on the Client Management Contract&apos;s &quot;Contract Fee Detail&quot; and associated date fields.</inlineHelpText>
    <label>Management Revenue Start Date</label>
    <type>Date</type>
</CustomField>