force-app/main/default/objects/Shared_Solar_System__c/fields/Maximum_Subscription_Capacity_kWDC__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Subscription_Capacity_kWDC__c</fullName>
    <inlineHelpText>Automatically set if the related Product has a &quot;Max Subscription kW AC for DC calc&quot; set (25 kW AC for SMART projects) and both Total System Size kWh DC and Total System Size kW AC fields populated</inlineHelpText>
    <label>Maximum Subscription Capacity (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>