force-app/main/default/objects/Shared_Solar_System__c/fields/Maximum_Subscription_Cost__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Subscription_Cost__c</fullName>
    <formula>Maximum_Subscription_Capacity_kWDC__c *  NMC_Value__c *  Expected_Yield_kWh_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Subscription Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>