force-app/main/default/objects/Shared_Solar_System__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <label>Meter #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>