force-app/main/default/objects/Shared_Solar_System__c/fields/Meter_Reading_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Meter_Reading_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the Meter Reading Schedule, which determines when the dates at which the host account meter will be read. The group can be found on the host account bill. This field is populated by the IX team.</description>
    <inlineHelpText>This is a lookup to the Meter Reading Schedule, which determines when the dates at which the host account meter will be read. The group can be found on the host account bill. This field is populated by the IX team.</inlineHelpText>
    <label>Meter Reading Schedule</label>
    <referenceTo>Meter_Reading_Schedule__c</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Shared_Solar_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>