force-app/main/default/objects/Shared_Solar_System__c/fields/Metric_Tons_of_CO2_Offset__c.field-meta.xml
<CustomField>
    <fullName>Metric_Tons_of_CO2_Offset__c</fullName>
    <formula>(Total_System_Size_kWh_DC__c  * Expected_Yield_kWh_kW__c)*7.07*0.0001</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EPA Calculation as of July 2019</inlineHelpText>
    <label>Annual Metric Tons of CO2 Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>