force-app/main/default/objects/Shared_Solar_System__c/fields/NMC_Value__c.field-meta.xml
<CustomField>
    <fullName>NMC_Value__c</fullName>
    <formula>Utility_NMC_Tariff__r.Value_of_Net_Metering_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>