force-app/main/default/objects/Shared_Solar_System__c/fields/Number_of_Billed_Production_Periods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Billed_Production_Periods__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The count of production periods that have First Date Production Billed populated</inlineHelpText>
    <label>Number of Billed Production Periods</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>