force-app/main/default/objects/Shared_Solar_System__c/fields/Payment_Gateway_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Name__c</fullName>
    <description>We have some systems (like Marathon) that don&apos;t use the Client&apos;s gateway, so we need to check an override first. And since usually the payment gateway is the same for all of a client&apos;s entities (and it&apos;s easy to forget to set the gateway on a new entity), we look to the Client Account for the entity.</description>
    <formula>IF(NOT(ISBLANK( BWC_Project_Entity_Manual__r.Payment_Gateway__c )),
   BWC_Project_Entity_Manual__r.Payment_Gateway__r.Name,
   IF(NOT(ISBLANK( Client_Account__r.Payment_Gateway__c )),
      Client_Account__r.Payment_Gateway__r.Name,
      NULL
   )
)</formula>
    <inlineHelpText>Name on the Entity&apos;s Payment Gateway Override, otherwise the Client Account&apos;s Payment Gateway</inlineHelpText>
    <label>Payment Gateway Name</label>
    <type>Text</type>
</CustomField>