force-app/main/default/objects/Shared_Solar_System__c/fields/Pending_Anchor_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Anchor_Capacity__c</fullName>
    <inlineHelpText>Sum of New, Pending, or QC in Process Perch acquired Anchor subscriptions</inlineHelpText>
    <label>Perch Acq Pending Anchor Capacity</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>