force-app/main/default/objects/Shared_Solar_System__c/fields/Pending_Small_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Small_CS_Capacity__c</fullName>
    <inlineHelpText>Sum of New, Pending, or QC in Process Perch Acq Small CS subscriptions, automatically calculated</inlineHelpText>
    <label>Perch Acq Pending Small CS Capacity</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>