force-app/main/default/objects/Shared_Solar_System__c/fields/Perch_Acq_Available_LMI_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Perch_Acq_Available_LMI_Capacity__c</fullName>
    <formula>Perch_Acq_Reserved_LMI_Capacity__c - (Perch_Acq_Pending_LMI_Capacity__c + Perch_Acq_Committed_LMI_Capacity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Perch acquired LMI Capacity not yet committed or pending; Result of Reserved LMI Capacity - (Committed and Pending LMI Capacity)</inlineHelpText>
    <label>Perch Acq Available LMI Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>