force-app/main/default/objects/Shared_Solar_System__c/fields/Perch_Acq_Committed_LMI_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Perch_Acq_Committed_LMI_Capacity__c</fullName>
    <inlineHelpText>Sum of Perch acquired Complete LMI Subscriptions, automatically calculated</inlineHelpText>
    <label>Perch Acq Committed LMI Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>