force-app/main/default/objects/Shared_Solar_System__c/fields/Perch_Acq_Pending_LMI_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Perch_Acq_Pending_LMI_Capacity__c</fullName>
    <inlineHelpText>Sum of New, Pending, or QC in Process Perch Acq LMI subscriptions, automatically calculated</inlineHelpText>
    <label>Perch Acq Pending LMI Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>