force-app/main/default/objects/Shared_Solar_System__c/fields/Perch_Acq_Reserved_Small_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Perch_Acq_Reserved_Small_CS_Capacity__c</fullName>
    <inlineHelpText>Capacity reserved for Perch-acquired Small CS customers, manually input via a Shared Solar System Order</inlineHelpText>
    <label>Perch Acq Reserved Small CS Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>