force-app/main/default/objects/Shared_Solar_System__c/fields/Perch_Mngd_Backlog_Resi_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Perch_Mngd_Backlog_Resi_Capacity__c</fullName>
    <formula>IF (Management_Revenue_Start_Date__c &lt;= TODAY(), NULL, Perch_Mngd_Forecasted_Resi_Capacity__c)</formula>
    <inlineHelpText>If Management Revenue Start Date is blank or in the future, then shows Forecasted capacity, otherwise blank</inlineHelpText>
    <label>Perch Mngd Backlog Resi Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>