force-app/main/default/objects/Shared_Solar_System__c/fields/Perch_Mngd_Forecasted_Resi_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Perch_Mngd_Forecasted_Resi_Capacity__c</fullName>
    <inlineHelpText>Perch Managed Forecasted C&amp;I Capacity, set or changed through a Shared Solar System Order</inlineHelpText>
    <label>Perch Mngd Forecasted Resi Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>